# GPMC

./: CMakeLists.txt  README.md
.github/workflows/: build-cross-platform.yml
c-mpfr/: ComplexMPFR.cc  ComplexMPFR.h
core/: Instance.cc  Main.cc
ddnnf/enumerator/: ddnnf.py  main.py
example/: dekel_test.cnf
